Bug 54299 - EDITING: CRASH when copy/paste particular table from web
Summary: EDITING: CRASH when copy/paste particular table from web
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other Windows (All)
: medium major
Assignee: Markus Mohrhard
URL: https://bugs.freedesktop.org/buglist...
Whiteboard: target:3.7.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-08-31 05:06 UTC by Rainer Bielefeld Retired
Modified: 2012-09-09 16:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-08-31 05:06:28 UTC
Steps how to reproduce with unzipped Master Build  "LOdev " 3.7.0.0.alpha0+  ENGLISH UI  [Build ID: 9ca3b53]" (tinderbox:W2008R2@20, pull time 2012-08-28 21:50:05) // WIN7 Home Premium (64bit):

1. Open new spreadshet by "New" button fom LibO Start center
2. Do query as per a.m. URL
   > Result withh app. 42 hits appears
3. Select Bugzilla web page contents
3.1. Click directly before "42 bugs found." at the top of the list
3.2. Select with pushed mouse button until behind "42 bugs found."
     behind the table list including the "."
4. <Control+c> for Copy
6. Click A1 in new spreadsheet
7. <Control+v> for paste
   Bug: CRASH

No problem with 3.6.1, so Regression
Comment 1 Markus Mohrhard 2012-08-31 14:14:36 UTC
Hey Rainer,

your bugzilla query is missing, the URL you linked is not there.
Comment 2 Rainer Bielefeld Retired 2012-09-05 05:06:23 UTC
@Markus
Indeed, I contributed a wrong link. Now it should work
Comment 3 Rainer Bielefeld Retired 2012-09-05 06:09:10 UTC
No crash with parallel installation of Master "LOdev  3.7.0.0.alpha0+   -  ENGLISH UI / German Locale  [Build ID: 6cad15d]"  {tinderbox: @6, pull time 2012-09-03 23:08:07} on German WIN7 Home Premium (64bit)  (installation without Base)
Comment 4 Markus Mohrhard 2012-09-05 19:06:09 UTC
Seems to be a problem with the rtf import. It uses a negative column number which result ins access to a non existent column.
Comment 5 Rainer Bielefeld Retired 2012-09-06 04:37:36 UTC
I did some additional observations with 3.7.0.0.alpha0+, no idea whether they are relevant for this bug

a) Most times I try I get crashes, also with  with parallel installation of Master "LOdev  3.7.0.0.alpha0+   -  ENGLISH UI / German Locale  [Build ID: 6cad15d]"  {tinderbox: @6, pull time 2012-09-03 23:08:07} on German WIN7 Home Premium (64bit)  (installation without Base) (what did not crash yesterday)
b) sometimes LibO does not crash, but shows very incomplete paste (only 1 column shown, column contents does not match with header, or similar), although clipboard contents is ok, what I tested with a paste into a new Writer document

My very vague suspect: might be that this negative column number problem is a random number problem
Comment 6 Markus Mohrhard 2012-09-09 15:50:12 UTC
The problem is one of the table to stl container commits. I just need to go through all of them and find the one that is broken.
Comment 7 Markus Mohrhard 2012-09-09 15:51:32 UTC
I should change the right field.
Comment 8 Not Assigned 2012-09-09 16:38:57 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8bed4206e1b5548e3525021d6d13025a6eb01081

fix crash introduced by stl conversion, fdo#54299



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.