fix crash introduced by stl conversion, fdo#54299

Change-Id: Ieb39563b1d26c3037d4200f9ec68f4ce2b2c7b42