sc/source/filter/rtf/rtfparse.cxx
@@ -125,7 +125,7 @@ sal_Bool ScRTFParser::SeekTwips( sal_uInt16 nTwips, SCCOL* pCol )
 {
     ScRTFColTwips::const_iterator it = pColTwips->find( nTwips );
     sal_Bool bFound = it != pColTwips->end();
-    sal_uInt16 nPos = it - pColTwips->end();
+    sal_uInt16 nPos = it - pColTwips->begin();
     *pCol = static_cast<SCCOL>(nPos);
     if ( bFound )
         return sal_True;
